{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 198,
  "lineage": "39a6e452-bf83-345a-99cc-f04fdae05626",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "data",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015853296082:loadbalancer/app/eks-blueprint-alb/9817fe44367f44a3",
            "arn_suffix": "app/eks-blueprint-alb/9817fe44367f44a3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "eks-blueprint-alb-1724478292.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:015853296082:loadbalancer/app/eks-blueprint-alb/9817fe44367f44a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eks-blueprint-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0376adcc290d50964"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c86d25c8edd83fb"
              },
              {
                "subnet_id": "subnet-05d5f4ef9d16526cb"
              },
              {
                "subnet_id": "subnet-0dc0a8ad56d7371f7"
              }
            ],
            "subnets": [
              "subnet-05c86d25c8edd83fb",
              "subnet-05d5f4ef9d16526cb",
              "subnet-0dc0a8ad56d7371f7"
            ],
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-alb"
            },
            "vpc_id": "vpc-0a79bf341912ec24e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "tg_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015853296082:targetgroup/eks-blueprint-tg-blue/84a4b5cbff78ab62",
            "arn_suffix": "targetgroup/eks-blueprint-tg-blue/84a4b5cbff78ab62",
            "deregistration_delay": 10,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/healthz",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:015853296082:targetgroup/eks-blueprint-tg-blue/84a4b5cbff78ab62",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "eks-blueprint-tg-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-tg-blue"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0a79bf341912ec24e"
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "tg_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015853296082:targetgroup/eks-blueprint-tg-green/0ba12cd0a65f5a0a",
            "arn_suffix": "targetgroup/eks-blueprint-tg-green/0ba12cd0a65f5a0a",
            "deregistration_delay": 10,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/healthz",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:015853296082:targetgroup/eks-blueprint-tg-green/0ba12cd0a65f5a0a",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "eks-blueprint-tg-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-tg-green"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0a79bf341912ec24e"
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "data",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015853296082:security-group/sg-0376adcc290d50964",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0376adcc290d50964",
            "name": "eks-blueprint-alb-20230708151357334800000001",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a79bf341912ec24e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015853296082:vpc/vpc-0a79bf341912ec24e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-082154ebf13e2bca3",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-3d435c47",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eks-blueprint"
                ]
              }
            ],
            "id": "vpc-0a79bf341912ec24e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-043dfd3119278cff4",
            "owner_id": "015853296082",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress from environment ALB security group",
            "from_port": 80,
            "id": "sgrule-4175792148",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a213e45616d7baf5",
            "security_group_rule_id": "sgr-0f1bba499a2f7c5c1",
            "self": false,
            "source_security_group_id": "sg-0376adcc290d50964",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015853296082:security-group/sg-0cd6600bde32cd346",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0cd6600bde32cd346",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress from environment ALB security group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "cluster Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-blueprint-blue-cluster-20230708070056625400000002",
            "name_prefix": "eks-blueprint-blue-cluster-",
            "owner_id": "015853296082",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-blueprint-blue",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-blue-cluster",
              "karpenter.sh/discovery": "eks-blueprint-blue"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint-blue",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-blue-cluster",
              "karpenter.sh/discovery": "eks-blueprint-blue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a79bf341912ec24e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_alb_security_group_id",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress from environment ALB security group",
            "from_port": 80,
            "id": "sgrule-2589197090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cd6600bde32cd346",
            "security_group_rule_id": "sgr-0a0b61b3a79f8ee87",
            "self": false,
            "source_security_group_id": "sg-0376adcc290d50964",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "cluster Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-2260806543",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cd6600bde32cd346",
            "security_group_rule_id": "sgr-0b166e0a440ce7958",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks_blueprints_dev_teams[\"burnham\"]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "team-burnham",
          "schema_version": 0,
          "attributes": {
            "id": "team-burnham",
            "metadata": [
              {
                "annotations": {
                  "team": "burnham"
                },
                "generation": 0,
                "labels": {
                  "appName": "burnham-team-app",
                  "elbv2.k8s.aws/pod-readiness-gate-inject": "enabled",
                  "projectName": "project-burnham",
                  "team": "burnham"
                },
                "name": "team-burnham",
                "resource_version": "4679",
                "uid": "b7fe2e33-7890-46cd-a28d-b0374a7a87b1"
              }
            ]
          },
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks_blueprints_dev_teams[\"riker\"]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "team-riker",
          "schema_version": 0,
          "attributes": {
            "id": "team-riker",
            "metadata": [
              {
                "annotations": {
                  "team": "riker"
                },
                "generation": 0,
                "labels": {
                  "appName": "riker-team-app",
                  "elbv2.k8s.aws/pod-readiness-gate-inject": "enabled",
                  "projectName": "project-riker",
                  "team": "riker"
                },
                "name": "team-riker",
                "resource_version": "4680",
                "uid": "2a7d2df0-b834-4c67-9e37-e449aca78137"
              }
            ]
          },
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks_blueprints_platform_teams",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "team-platform",
          "schema_version": 0,
          "attributes": {
            "id": "team-platform",
            "metadata": [
              {
                "annotations": {
                  "team": "platform"
                },
                "generation": 0,
                "labels": {
                  "appName": "platform-team-app",
                  "elbv2.k8s.aws/pod-readiness-gate-inject": "enabled",
                  "projectName": "project-platform"
                },
                "name": "team-platform",
                "resource_version": "3417",
                "uid": "151f389d-adc5-4eb3-a1cf-78da7819dda1"
              }
            ]
          },
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.argo_rollouts[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argo-rollouts",
            "metadata": [
              {
                "generation": 0,
                "name": "argo-rollouts",
                "resource_version": "43483",
                "uid": "fcd241d4-f8c6-4fc7-8134-2248933ed76b"
              }
            ]
          },
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.argocd[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "13275",
                "uid": "2aa91f7a-8299-4079-a013-1ea10dfd519b"
              }
            ]
          },
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_secretsmanager_secret.argocd",
            "module.eks_cluster.data.aws_secretsmanager_secret_version.admin_password_version",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.aws_for_fluent_bit[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aws-for-fluent-bit",
            "metadata": [
              {
                "generation": 0,
                "name": "aws-for-fluent-bit",
                "resource_version": "13554",
                "uid": "3cdb79f4-2e8a-4f67-9203-80aafa8fcbe3"
              }
            ],
            "timeouts": {
              "delete": "15m"
            }
          },
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_cluster.module.kubernetes_addons.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_region.current",
            "module.eks_cluster.module.kubernetes_addons.module.aws_for_fluent_bit.aws_iam_policy.aws_for_fluent_bit",
            "module.eks_cluster.module.kubernetes_addons.module.aws_for_fluent_bit.data.aws_iam_policy_document.irsa",
            "module.eks_cluster.module.kubernetes_addons.time_sleep.dataplane"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.ingress_nginx[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-nginx",
                "resource_version": "149399",
                "uid": "dffcccbb-c598-4ae7-9a08-ff87f5fd1083"
              }
            ]
          },
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.karpenter[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "karpenter",
            "metadata": [
              {
                "generation": 0,
                "name": "karpenter",
                "resource_version": "63902",
                "uid": "f24447ea-d86d-41be-a05b-f3f07a6956c6"
              }
            ],
            "timeouts": {
              "delete": "15m"
            }
          },
          "dependencies": [
            "module.eks_cluster.data.aws_lb.alb",
            "module.eks_cluster.data.aws_security_group.alb_sg",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.eks_cluster.module.karpenter.aws_iam_instance_profile.this",
            "module.eks_cluster.module.karpenter.aws_iam_role.this",
            "module.eks_cluster.module.karpenter.data.aws_iam_policy_document.assume_role",
            "module.eks_cluster.module.karpenter.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_cluster.module.kubernetes_addons.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_region.current",
            "module.eks_cluster.module.kubernetes_addons.module.karpenter.aws_iam_policy.karpenter",
            "module.eks_cluster.module.kubernetes_addons.module.karpenter.aws_sqs_queue.this",
            "module.eks_cluster.module.kubernetes_addons.module.karpenter.data.aws_iam_policy_document.karpenter",
            "module.eks_cluster.module.kubernetes_addons.time_sleep.dataplane"
          ]
        }
      ]
    }
  ]
}